--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "imagesloaded": "^4.1.0",
     "jquery": "^2.2.3",
     "swiper": "^3.3.1",
+    "three": "^0.76.1",
+    "tween.js": "^16.3.4",
     "velocity-animate": "^1.2.3"
   }
 }
