--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "swiper": "^3.3.1",
     "three": "^0.76.1",
     "tween.js": "^16.3.4",
+    "ua-parser-js": "^0.7.10",
     "velocity-animate": "^1.2.3"
   }
 }
