--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browserify": "^13.0.1",
     "glob": "^7.0.3",
     "gulp": "^3.9.0",
+    "gulp-base64": "^0.1.3",
     "gulp-cache": "^0.4.4",
     "gulp-combine-media-queries": "^0.2.0",
     "gulp-csscomb": "^3.0.7",
@@ -21,6 +22,7 @@
     "gulp-jade": "^1.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-plumber": "^1.1.0",
+    "gulp-replace": "^0.5.4",
     "gulp-rev": "^7.0.0",
     "gulp-rev-delete-original": "^0.1.0",
     "gulp-rev-replace": "^0.4.3",
